k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecomdemo-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
